# agezt

./: .cgo_disabled  .env.example  .gitattributes  .gitignore  .gitleaks.toml  ARCHITECTURAL-REPORT.md  ARCHITECTURE.md  CHANGELOG.md  DEPENDENCIES.md  Install.md  LICENSE  Makefile  README.md  build.sh  dev.ps1  find_302ai.py  go.mod  go.sum  install.ps1  install.sh  list_vault.py  scout_soul.ps1  set_scout_soul.ps1  start-daemon.bat  start-daemon.ps1  update_scout_soul.go
.github/: CODEOWNERS  dependabot.yml
.project/: ACCEPTANCE.md  AGEZT-VISION-MASTER.md  AGEZT-VISION.md  BRANDING.md  BUILD-GUIDE.md  COUNCIL-HARDENING-PLAN.md  DECISIONS.md  HARDENING.md  IMPLEMENTATION.md  INDEX.md  LICENSE  PHASE-DOCTOR-REPORT.md  PHASE-M0-REPORT.md  PHASE-M0.5-REPORT.md  PHASE-M1-BATCH-2-REPORT.md  PHASE-M1-BATCH-3-REPORT.md  PHASE-M1-BATCH-4-REPORT.md  PHASE-M1.a-REPORT.md  PHASE-M1.aa-REPORT.md  PHASE-M1.b-REPORT.md  PHASE-M1.bb-REPORT.md  PHASE-M1.c-REPORT.md  PHASE-M1.cc-REPORT.md  PHASE-M1.d-REPORT.md  PHASE-M1.dd-REPORT.md  PHASE-M1.e-REPORT.md  PHASE-M1.ee-REPORT.md  PHASE-M1.f-REPORT.md  PHASE-M1.ff-REPORT.md  PHASE-M1.g-REPORT.md  PHASE-M1.gg-REPORT.md  PHASE-M1.h-REPORT.md  PHASE-M1.i-REPORT.md  PHASE-M1.j-REPORT.md  (+749 more)
sdk/: sdk.go  (+14 more)
sdk/python/: README.md  pyproject.toml
sdk/python/agezt/: __init__.py  agent.py  aio.py  client.py  errors.py
sdk/python/examples/: agent_example.py
sdk/python/tests/: test_aio.py  test_client.py  test_mailbox.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: client.rs  errors.rs  http.rs  json.rs  lib.rs
sdk/rust/tests/: client.rs
(+2130 files in other folders)
